# carla_autoware

./: README.md
autoware_carla_transfer/: CMakeLists.txt  package.xml
autoware_carla_transfer/include/autoware_carla_transfer/: autoware_carla_transfer_core.hpp
autoware_carla_transfer/script/: spawn_egovehicle.py
autoware_carla_transfer/scripts/: dbw_actuation.py  spawn_egovehicle.py  sync_without_dynamics.py
autoware_carla_transfer/src/: autoware_carla_transfer_core.cpp  autoware_carla_transfer_node.cpp
carla_autoware_transfer/: CMakeLists.txt  package.xml
carla_autoware_transfer/config/: params.yaml
carla_autoware_transfer/include/carla_autoware_transfer/: carla_autoware_transfer_core.hpp
carla_autoware_transfer/src/: carla_autoware_transfer_core.cpp  carla_autoware_transfer_node.cpp
carla_pointcloud/: package.xml
carla_pointcloud/src/carla_pointcloud/: carla_pointcloud_interface_node.cpp
global_parameter_loader/: CMakeLists.txt  package.xml
global_parameter_loader/launch/: global_params.launch.py
